set min-height on container to prevent page jumps

--- a/Site/webapp/wdkCustomization/css/question-wizard.css
+++ b/Site/webapp/wdkCustomization/css/question-wizard.css
@@ -427,6 +427,7 @@ button.ebrc-QuestionWizardParamGroupButton__active:hover {
 .ebrc-QuestionWizardParam {
   display: flex;
   margin: 1em 0;
+  min-height: 36em;
 }
 
 .ebrc-QuestionWizardParam + .ebrc-QuestionWizardParam__filter {
